[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skinport.py"
authors = [
    {name = "PaxxPatriot", email = "skinport.py@gmail.com" },
]
description = "A Python wrapper for the Skinport API"
readme = "README.md"
keywords = ["Skinport", "Counter-Strike 2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp",
    "asyncache",
    "cachetools",
    "python-socketio[asyncio_client]",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://paxxpatriot.github.io/skinport.py/"
Repository = "https://github.com/PaxxPatriot/skinport.py.git"
Issues = "https://github.com/PaxxPatriot/skinport.py/issues"

[tool.setuptools]
packages = ["skinport"]

[tool.setuptools.dynamic]
version = {attr = "skinport.__version__"}
